# thefabric

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: daily_session.json
tests/: test_bundlefabric.py  test_jean_marc.py  test_session_analysis.py
thefabric/: __init__.py  cli.py  engine.py  models.py  session_analysis.py
thefabric/integrations/: __init__.py  bundlefabric.py  hermes.py  jean_marc.py  kfabric.py  pyspur.py
